Refactor CDataProviderResolver and related classes to enhance clarity and streamline bean retrieval logic